updated the project to support JDK 9